--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,7 +27,7 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
-  UnitAndComponentsTests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
